--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Удостоверение личности</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
+      background: #fff;
+      color: #333;
     }
 
     .header {
@@ -29,21 +36,22 @@
 
     .tabs {
       display: flex;
-      margin: 15px;
+      margin: 10px 16px;
       border: 1px solid #f44336;
-      border-radius: 4px;
+      border-radius: 6px;
       overflow: hidden;
     }
 
     .tab {
       flex: 1;
       text-align: center;
-      padding: 10px;
-      color: #f44336;
+      padding: 10px 0;
+      font-size: 16px;
       font-weight: 500;
-      cursor: pointer;
-      background-color: white;
+      color: #f44336;
+      background: #fff;
       border-right: 1px solid #f44336;
+      cursor: pointer;
     }
 
     .tab:last-child {
@@ -56,24 +64,24 @@
     }
 
     .content {
-      padding: 20px;
-      min-height: 300px;
+      padding: 20px 16px;
     }
 
     .upload-container {
       display: flex;
       justify-content: center;
-      margin-top: 100px;
+      margin-top: 60px;
     }
 
     .upload-btn {
-      padding: 20px 40px;
+      padding: 14px 30px;
       border: 2px solid #e65c43;
-      border-radius: 25px;
+      border-radius: 30px;
       color: #e65c43;
-      font-size: 20px;
+      font-size: 18px;
       background: none;
       cursor: pointer;
+      text-align: center;
     }
 
     .hidden {
@@ -89,7 +97,7 @@
 
     .field-list {
       list-style: none;
-      padding: 0 20px;
+      padding: 0;
     }
 
     .field-item {
@@ -98,7 +106,7 @@
       align-items: center;
       padding: 12px 0;
       border-bottom: 1px solid #eee;
-      color: #999;
+      color: #555;
       font-size: 16px;
     }
 
@@ -112,22 +120,22 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
-      gap: 10px;
+      padding: 20px 16px;
+      gap: 12px;
     }
 
     .main-btn {
       background-color: #0288d1;
       color: white;
       border: none;
-      padding: 15px 30px;
+      padding: 16px;
       font-size: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
       width: 100%;
-      max-width: 500px;
-      cursor: pointer;
+      max-width: 100%;
+      border-radius: 4px;
     }
 
     .main-btn img.qr-icon {
@@ -146,10 +154,20 @@
       align-items: center;
     }
 
-    .upload-icon {
+    .secondary-btn img {
       width: 22px;
       height: 22px;
       margin-right: 8px;
+    }
+
+    @media (min-width: 768px) {
+      .content {
+        padding: 30px 100px;
+      }
+
+      .main-btn {
+        max-width: 400px;
+      }
     }
   </style>
 </head>
@@ -157,7 +175,7 @@
 
   <!-- Header -->
   <div class="header">
-    <img src="arrow.png" alt="Back" class="back-arrow">
+    <img src="arrow.png" alt="Назад" class="back-arrow">
     Удостоверение личности
   </div>
 
@@ -167,9 +185,8 @@
     <div class="tab" onclick="showTab('info')">Реквизиты</div>
   </div>
 
-  <!-- Content Area -->
+  <!-- Content -->
   <div class="content">
-    <!-- Документ -->
     <div id="tab-doc" class="tab-content">
       <div class="upload-container" id="uploadBlock">
         <label for="fileInput" class="upload-btn">Загрузить</label>
@@ -177,35 +194,33 @@
       </div>
     </div>
 
-    <!-- Реквизиты -->
     <div id="tab-info" class="tab-content hidden">
       <ul class="field-list">
-        <li class="field-item">ФИО <img src="copy.png" alt="Copy"></li>
-        <li class="field-item">ИИН <img src="copy.png" alt="Copy"></li>
-        <li class="field-item">Дата рождения <img src="copy.png" alt="Copy"></li>
-        <li class="field-item">Номер документа <img src="copy.png" alt="Copy"></li>
-        <li class="field-item">Дата выдачи <img src="copy.png" alt="Copy"></li>
+        <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
       </ul>
     </div>
   </div>
 
-  <!-- Bottom Buttons -->
+  <!-- Bottom buttons -->
   <div class="bottom-buttons">
     <button class="main-btn">
       <img src="qr.png" alt="QR" class="qr-icon">
       Предъявить документ
     </button>
     <button class="secondary-btn">
-      <img src="upload.png" alt="Upload" class="upload-icon">
+      <img src="upload.png" alt="Upload">
       Отправить документ
     </button>
   </div>
 
-  <!-- Scripts -->
   <script>
     function showTab(name) {
-      document.querySelectorAll('.tab').forEach(el => el.classList.remove('active'));
-      document.querySelectorAll('.tab-content').forEach(el => el.classList.add('hidden'));
+      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+      document.querySelectorAll('.tab-content').forEach(content => content.classList.add('hidden'));
 
       if (name === 'doc') {
         document.querySelector('.tab:first-child').classList.add('active');
@@ -230,6 +245,5 @@
       }
     }
   </script>
-
 </body>
 </html>
