--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       padding: 15px 0;
       font-size: 20px;
       font-weight: 500;
-      border-bottom: 1px solid #eee;
+      margin-bottom: 12px;
     }
 
     .back-arrow {
@@ -36,26 +36,27 @@
 
     .tabs {
       display: flex;
-      margin: 10px 16px;
-      border: 1px solid #f44336;
-      border-radius: 6px;
-      overflow: hidden;
+      margin: 0;
+      width: 100%;
+      border: none;
+      padding-bottom: 8px;
     }
 
     .tab {
       flex: 1;
       text-align: center;
-      padding: 10px 0;
+      padding: 6px 0;
       font-size: 16px;
       font-weight: 500;
       color: #f44336;
-      background: #fff;
-      border-right: 1px solid #f44336;
+      border: 1px solid #f44336;
+      background-color: white;
       cursor: pointer;
+      border-right: none;
     }
 
     .tab:last-child {
-      border-right: none;
+      border-right: 1px solid #f44336;
     }
 
     .tab.active {
@@ -63,14 +64,20 @@
       color: white;
     }
 
-    .content {
-      padding: 20px 16px;
+    .tab-line {
+      width: 100vw;
+      height: 2px;
+      background-color: #eee;
+      margin-top: 8px;
+      margin-left: calc(-1 * (100vw - 100%) / 2);
     }
 
     .upload-container {
       display: flex;
       justify-content: center;
-      margin-top: 60px;
+      margin: 30px 0;
+      flex-direction: column;
+      align-items: center;
     }
 
     .upload-btn {
@@ -90,9 +97,15 @@
 
     .uploaded-image {
       display: block;
-      margin: 20px auto;
+      margin: 20px auto 0;
       max-width: 90%;
       height: auto;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    .content {
+      padding: 20px 16px;
     }
 
     .field-list {
@@ -139,8 +152,8 @@
     }
 
     .main-btn img.qr-icon {
-      width: 22px;
-      height: 22px;
+      width: 25px;
+      height: 25px;
       margin-right: 10px;
     }
 
@@ -185,15 +198,20 @@
     <div class="tab" onclick="showTab('info')">Реквизиты</div>
   </div>
 
+  <div class="tab-line"></div>
+
   <!-- Content -->
   <div class="content">
+    <!-- Вкладка Документ -->
     <div id="tab-doc" class="tab-content">
       <div class="upload-container" id="uploadBlock">
         <label for="fileInput" class="upload-btn">Загрузить</label>
         <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
       </div>
+      <img id="uploadedImage" class="uploaded-image hidden">
     </div>
 
+    <!-- Вкладка Реквизиты -->
     <div id="tab-info" class="tab-content hidden">
       <ul class="field-list">
         <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
@@ -205,7 +223,7 @@
     </div>
   </div>
 
-  <!-- Bottom buttons -->
+  <!-- Кнопки внизу -->
   <div class="bottom-buttons">
     <button class="main-btn">
       <img src="qr.png" alt="QR" class="qr-icon">
@@ -217,6 +235,7 @@
     </button>
   </div>
 
+  <!-- JS -->
   <script>
     function showTab(name) {
       document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
@@ -239,11 +258,14 @@
           const img = document.getElementById('uploadedImage');
           img.src = e.target.result;
           img.classList.remove('hidden');
+
+          // Убираем кнопку загрузки
           document.getElementById('uploadBlock').classList.add('hidden');
         };
         reader.readAsDataURL(file);
       }
     }
   </script>
+
 </body>
 </html>
