--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@
 
     .tab-line {
       width: 100vw;
-      height: 2px;
+      height: 1px;
       background-color: #eee;
-      margin-top: 8px;
+      margin-top: 0;
       margin-left: calc(-1 * (100vw - 100%) / 2);
     }
 
     .upload-container {
       display: flex;
       justify-content: center;
-      margin: 30px 0;
-      flex-direction: column;
-      align-items: center;
+      margin: 40px 0 0;
     }
 
     .upload-btn {
@@ -95,12 +93,19 @@
       display: none;
     }
 
-    .uploaded-image {
-      display: block;
+    .image-wrapper {
+      width: 320px;
+      height: 220px;
       margin: 20px auto 0;
-      max-width: 90%;
-      height: auto;
-      border-radius: 8px;
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    .uploaded-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
 
     .content {
@@ -199,18 +204,21 @@
 
   <div class="tab-line"></div>
 
+  <!-- Upload button -->
+  <div class="upload-container" id="uploadBlock">
+    <label for="fileInput" class="upload-btn">Загрузить</label>
+    <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
+  </div>
+
+  <!-- Uploaded image container -->
+  <div id="imageContainer" class="image-wrapper hidden">
+    <img id="uploadedImage" class="uploaded-image">
+  </div>
+
   <!-- Content -->
   <div class="content">
-    <!-- Вкладка Документ -->
-    <div id="tab-doc" class="tab-content">
-      <div class="upload-container" id="uploadBlock">
-        <label for="fileInput" class="upload-btn">Загрузить</label>
-        <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
-      </div>
-      <img id="uploadedImage" class="uploaded-image hidden">
-    </div>
+    <div id="tab-doc" class="tab-content"></div>
 
-    <!-- Вкладка Реквизиты -->
     <div id="tab-info" class="tab-content hidden">
       <ul class="field-list">
         <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
@@ -222,7 +230,7 @@
     </div>
   </div>
 
-  <!-- Кнопки внизу -->
+  <!-- Bottom buttons -->
   <div class="bottom-buttons">
     <button class="main-btn">
       <img src="qr.png" alt="QR" class="qr-icon">
@@ -234,18 +242,27 @@
     </button>
   </div>
 
-  <!-- JS -->
+  <!-- Script -->
   <script>
     function showTab(name) {
       document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
       document.querySelectorAll('.tab-content').forEach(content => content.classList.add('hidden'));
 
+      const uploadBlock = document.getElementById('uploadBlock');
+      const imageContainer = document.getElementById('imageContainer');
+
       if (name === 'doc') {
         document.querySelector('.tab:first-child').classList.add('active');
         document.getElementById('tab-doc').classList.remove('hidden');
+        if (!document.getElementById('uploadedImage').src) {
+          uploadBlock.classList.remove('hidden');
+        }
+        imageContainer.classList.remove('hidden');
       } else {
         document.querySelector('.tab:last-child').classList.add('active');
         document.getElementById('tab-info').classList.remove('hidden');
+        uploadBlock.classList.add('hidden');
+        imageContainer.classList.add('hidden');
       }
     }
 
@@ -256,9 +273,7 @@
         reader.onload = function (e) {
           const img = document.getElementById('uploadedImage');
           img.src = e.target.result;
-          img.classList.remove('hidden');
-
-          // Убираем кнопку загрузки
+          document.getElementById('imageContainer').classList.remove('hidden');
           document.getElementById('uploadBlock').classList.add('hidden');
         };
         reader.readAsDataURL(file);
