--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
       background: #fff;
       color: #333;
+      font-size: 14px;
     }
 
     .header {
       position: relative;
       text-align: center;
-      padding: 15px 0;
-      font-size: 20px;
+      padding: 12px 0;
+      font-size: 18px;
       font-weight: 500;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
     }
 
     .back-arrow {
@@ -30,22 +31,21 @@
       left: 16px;
       top: 50%;
       transform: translateY(-50%);
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
     }
 
     .tabs {
       display: flex;
       width: 100%;
-      border: none;
-      padding-bottom: 8px;
+      padding-bottom: 6px;
     }
 
     .tab {
       flex: 1;
       text-align: center;
       padding: 6px 0;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 500;
       color: #f44336;
       border: 1px solid #f44336;
@@ -74,15 +74,15 @@
     .upload-container {
       display: flex;
       justify-content: center;
-      margin: 40px 0 0;
+      margin: 30px 0 0;
     }
 
     .upload-btn {
-      padding: 14px 30px;
+      padding: 10px 22px;
       border: 2px solid #e65c43;
-      border-radius: 30px;
+      border-radius: 24px;
       color: #e65c43;
-      font-size: 18px;
+      font-size: 16px;
       background: none;
       cursor: pointer;
     }
@@ -92,7 +92,7 @@
     }
 
     .image-wrapper {
-      margin-top: 20px;
+      margin-top: 16px;
     }
 
     .image-wrapper img {
@@ -104,27 +104,28 @@
     }
 
     .content {
-      padding: 20px 16px;
+      padding: 16px;
     }
 
     .field-list {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     .field-item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 12px 0;
+      padding: 10px 0;
       border-bottom: 1px solid #eee;
       color: #555;
-      font-size: 16px;
+      font-size: 14px;
     }
 
     .field-item img {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
       cursor: pointer;
     }
 
@@ -132,16 +133,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px 16px;
-      gap: 12px;
+      padding: 16px;
+      gap: 10px;
     }
 
     .main-btn {
       background-color: #0288d1;
       color: white;
       border: none;
-      padding: 16px;
-      font-size: 18px;
+      padding: 14px;
+      font-size: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -151,30 +152,34 @@
     }
 
     .main-btn img.qr-icon {
-      width: 25px;
-      height: 25px;
-      margin-right: 10px;
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
     }
 
     .secondary-btn {
       background: none;
       color: #0288d1;
       border: none;
-      font-size: 16px;
+      font-size: 14px;
       cursor: pointer;
       display: flex;
       align-items: center;
     }
 
     .secondary-btn img {
-      width: 22px;
-      height: 22px;
-      margin-right: 8px;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
     }
 
     @media (min-width: 768px) {
+      body {
+        font-size: 16px;
+      }
+
       .content {
-        padding: 30px 100px;
+        padding: 24px 80px;
       }
 
       .main-btn {
@@ -196,8 +201,6 @@
     <div class="tab active" onclick="showTab('doc')">Документ</div>
     <div class="tab" onclick="showTab('info')">Реквизиты</div>
   </div>
-
-  <!-- Gray line under tabs -->
   <div class="tab-line"></div>
 
   <!-- Upload -->
@@ -214,7 +217,7 @@
   <!-- Content -->
   <div class="content">
     <div id="tab-doc" class="tab-content">
-      <!-- Динамически вставленное изображение будет отображаться выше -->
+      <!-- Здесь будет отображаться изображение -->
     </div>
 
     <div id="tab-info" class="tab-content hidden">
