--- a/index.html
+++ b/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Удостоверение личности</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-      background: #fff;
+      font-family: sans-serif;
+      background-color: #fff;
       color: #333;
+      padding: 0 12px;
       font-size: 14px;
+      max-width: 430px;
+      margin: 0 auto;
     }
 
     .header {
-      position: relative;
-      text-align: center;
-      padding: 12px 0;
-      font-size: 18px;
+      display: flex;
+      align-items: center;
+      padding: 14px 0 10px;
+      font-size: 17px;
       font-weight: 500;
-      margin-bottom: 8px;
+      justify-content: center;
+      position: relative;
     }
 
-    .back-arrow {
+    .header img {
       position: absolute;
-      left: 16px;
+      left: 0;
+      width: 24px;
+      height: 24px;
       top: 50%;
       transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
     }
 
     .tabs {
       display: flex;
-      width: 100%;
-      padding-bottom: 6px;
+      margin: 6px 0 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      overflow: hidden;
     }
 
     .tab {
       flex: 1;
       text-align: center;
-      padding: 6px 0;
-      font-size: 14px;
+      padding: 8px 0;
       font-weight: 500;
-      color: #f44336;
-      border: 1px solid #f44336;
-      background-color: white;
-      cursor: pointer;
-      border-right: none;
-    }
-
-    .tab:last-child {
-      border-right: 1px solid #f44336;
+      font-size: 14px;
+      border: none;
+      background-color: #fff;
     }
 
     .tab.active {
@@ -63,175 +63,104 @@
       color: white;
     }
 
-    .tab-line {
-      width: 100vw;
-      height: 2px;
-      background-color: #eee;
-      margin-top: 8px;
-      margin-left: calc(-1 * (100vw - 100%) / 2);
+    .content img {
+      width: 100%;
+      border: none;
+      border-radius: 6px;
     }
 
-    .upload-container {
-      display: flex;
-      justify-content: center;
-      margin: 30px 0 0;
-    }
-
-    .upload-btn {
-      padding: 10px 22px;
-      border: 2px solid #e65c43;
-      border-radius: 24px;
-      color: #e65c43;
-      font-size: 16px;
-      background: none;
-      cursor: pointer;
-    }
-
-    .hidden {
+    #imageInput {
       display: none;
     }
 
-    .image-wrapper {
-      margin-top: 16px;
-    }
-
-    .image-wrapper img {
+    #imagePreview {
       width: 100%;
-      height: auto;
-      display: block;
-      border: none;
-      border-radius: 0;
+      border-radius: 6px;
     }
 
-    .content {
-      padding: 16px;
-    }
-
-    .field-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .field-item {
+    .upload-wrapper {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 0;
-      border-bottom: 1px solid #eee;
-      color: #555;
-      font-size: 14px;
+      justify-content: center;
+      margin-bottom: 14px;
     }
 
-    .field-item img {
-      width: 20px;
-      height: 20px;
+    .upload-btn {
+      background-color: #f44336;
+      color: white;
+      padding: 8px 18px;
+      font-size: 14px;
+      border: none;
+      border-radius: 20px;
       cursor: pointer;
     }
 
     .bottom-buttons {
+      margin-top: 14px;
+      padding: 0 16px 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 16px;
-      gap: 10px;
+      gap: 14px;
     }
 
     .main-btn {
-      background-color: #0288d1;
+      background-color: #388cd9;
       color: white;
       border: none;
-      padding: 14px;
+      padding: 16px 0;
       font-size: 16px;
+      width: 100%;
+      max-width: 320px;
+      border-radius: 2px;
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 100%;
-      max-width: 100%;
-      border-radius: 4px;
+      gap: 8px;
     }
 
     .main-btn img.qr-icon {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
+      width: 22px;
+      height: 22px;
     }
 
     .secondary-btn {
       background: none;
-      color: #0288d1;
       border: none;
-      font-size: 14px;
-      cursor: pointer;
+      color: #388cd9;
+      font-size: 16px;
       display: flex;
       align-items: center;
+      gap: 6px;
+      padding: 0;
     }
 
     .secondary-btn img {
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
+      width: 20px;
+      height: 20px;
     }
 
-    @media (min-width: 768px) {
-      body {
-        font-size: 16px;
-      }
-
-      .content {
-        padding: 24px 80px;
-      }
-
-      .main-btn {
-        max-width: 400px;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
   <div class="header">
-    <img src="arrow.png" alt="Назад" class="back-arrow">
+    <img src="arrow.png" alt="Back">
     Удостоверение личности
   </div>
 
-  <!-- Tabs -->
   <div class="tabs">
-    <div class="tab active" onclick="showTab('doc')">Документ</div>
-    <div class="tab" onclick="showTab('info')">Реквизиты</div>
-  </div>
-  <div class="tab-line"></div>
-
-  <!-- Upload -->
-  <div class="upload-container" id="uploadBlock">
-    <label for="fileInput" class="upload-btn">Загрузить</label>
-    <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
+    <button class="tab active">Документ</button>
+    <button class="tab">Реквизиты</button>
   </div>
 
-  <!-- Image -->
-  <div class="image-wrapper hidden" id="imageWrapper">
-    <img id="uploadedImage" src="" alt="Загруженный документ">
-  </div>
-
-  <!-- Content -->
   <div class="content">
-    <div id="tab-doc" class="tab-content">
-      <!-- Здесь будет отображаться изображение -->
+    <div class="upload-wrapper" id="uploadWrapper">
+      <label class="upload-btn" for="imageInput">Загрузить</label>
+      <input type="file" id="imageInput" accept="image/*">
     </div>
-
-    <div id="tab-info" class="tab-content hidden">
-      <ul class="field-list">
-        <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
-      </ul>
-    </div>
+    <img id="imagePreview" src="" alt="Загруженное изображение" style="display: none;">
   </div>
 
-  <!-- Bottom buttons -->
   <div class="bottom-buttons">
     <button class="main-btn">
       <img src="qr.png" alt="QR" class="qr-icon">
@@ -243,44 +172,23 @@
     </button>
   </div>
 
-  <!-- Script -->
   <script>
-    function showTab(name) {
-      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-      document.querySelectorAll('.tab-content').forEach(content => content.classList.add('hidden'));
+    const input = document.getElementById("imageInput");
+    const preview = document.getElementById("imagePreview");
+    const uploadWrapper = document.getElementById("uploadWrapper");
 
-      const uploadBlock = document.getElementById('uploadBlock');
-      const imageWrapper = document.getElementById('imageWrapper');
-
-      if (name === 'doc') {
-        document.querySelector('.tab:first-child').classList.add('active');
-        document.getElementById('tab-doc').classList.remove('hidden');
-        if (!imageWrapper.classList.contains('hidden')) {
-          uploadBlock.classList.add('hidden');
-        } else {
-          uploadBlock.classList.remove('hidden');
-        }
-      } else {
-        document.querySelector('.tab:last-child').classList.add('active');
-        document.getElementById('tab-info').classList.remove('hidden');
-        uploadBlock.classList.add('hidden');
-      }
-    }
-
-    function handleUpload(input) {
+    input.addEventListener("change", () => {
       const file = input.files[0];
       if (file) {
         const reader = new FileReader();
-        reader.onload = function (e) {
-          const img = document.getElementById('uploadedImage');
-          img.src = e.target.result;
-          document.getElementById('imageWrapper').classList.remove('hidden');
-          document.getElementById('uploadBlock').classList.add('hidden');
+        reader.onload = () => {
+          preview.src = reader.result;
+          preview.style.display = "block";
+          uploadWrapper.style.display = "none";
         };
         reader.readAsDataURL(file);
       }
-    }
+    });
   </script>
-
 </body>
 </html>
