--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     }
 
     body {
-      margin: 0 auto;
-      max-width: 390px;
-      padding: 0 12px;
+      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
       background: #fff;
       color: #333;
@@ -22,19 +20,19 @@
     .header {
       position: relative;
       text-align: center;
-      padding: 10px 0;
-      font-size: 16px;
+      padding: 10px 0 6px;
+      font-size: 17px;
       font-weight: 500;
-      margin-bottom: 6px;
+      margin-bottom: 4px;
     }
 
     .back-arrow {
       position: absolute;
-      left: 12px;
+      left: 16px;
       top: 50%;
       transform: translateY(-50%);
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
     }
 
     .tabs {
@@ -46,7 +44,7 @@
     .tab {
       flex: 1;
       text-align: center;
-      padding: 5px 0;
+      padding: 6px 0;
       font-size: 13px;
       font-weight: 500;
       color: #f44336;
@@ -80,11 +78,11 @@
     }
 
     .upload-btn {
-      padding: 8px 20px;
+      padding: 8px 18px;
       border: 2px solid #e65c43;
-      border-radius: 22px;
+      border-radius: 20px;
       color: #e65c43;
-      font-size: 14px;
+      font-size: 15px;
       background: none;
       cursor: pointer;
     }
@@ -94,17 +92,18 @@
     }
 
     .image-wrapper {
-      margin-top: 14px;
+      margin-top: 12px;
     }
 
     .image-wrapper img {
       width: 100%;
       height: auto;
       display: block;
+      border: none;
     }
 
     .content {
-      padding: 14px 0;
+      padding: 12px 12px 0;
     }
 
     .field-list {
@@ -117,15 +116,15 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 8px 0;
+      padding: 10px 0;
       border-bottom: 1px solid #eee;
       color: #555;
-      font-size: 13px;
+      font-size: 14px;
     }
 
     .field-item img {
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       cursor: pointer;
     }
 
@@ -133,9 +132,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 12px;
-      gap: 8px;
-      margin-top: 0px;
+      padding: 12px 16px 16px;
+      gap: 10px;
     }
 
     .main-btn {
@@ -143,12 +141,13 @@
       color: white;
       border: none;
       padding: 12px;
-      font-size: 15px;
+      font-size: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
       width: 100%;
-      border-radius: 4px;
+      max-width: 90%;
+      border-radius: 10px;
     }
 
     .main-btn img.qr-icon {
@@ -161,7 +160,7 @@
       background: none;
       color: #0288d1;
       border: none;
-      font-size: 13px;
+      font-size: 15px;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -171,6 +170,20 @@
       width: 18px;
       height: 18px;
       margin-right: 6px;
+    }
+
+    @media (min-width: 768px) {
+      body {
+        font-size: 16px;
+      }
+
+      .content {
+        padding: 20px 80px;
+      }
+
+      .main-btn {
+        max-width: 400px;
+      }
     }
   </style>
 </head>
@@ -203,7 +216,7 @@
   <!-- Content -->
   <div class="content">
     <div id="tab-doc" class="tab-content">
-      <!-- Image or data -->
+      <!-- Контент вкладки "Документ" -->
     </div>
 
     <div id="tab-info" class="tab-content hidden">
@@ -246,10 +259,12 @@
         } else {
           uploadBlock.classList.remove('hidden');
         }
+        imageWrapper.classList.remove('hidden'); // Показывать изображение
       } else {
         document.querySelector('.tab:last-child').classList.add('active');
         document.getElementById('tab-info').classList.remove('hidden');
         uploadBlock.classList.add('hidden');
+        imageWrapper.classList.add('hidden'); // Скрыть изображение
       }
     }
 
