--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       display: flex;
       width: 100%;
       padding: 0 16px;
-      margin-bottom: 0;
+      margin-bottom: 8px;
     }
 
     .tab {
