--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     .image-wrapper {
       margin-top: 15px;
       padding: 0 16px;
+      marign-bottom: 10px;
     }
 
     .image-wrapper img {
