--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     }
 
     .image-wrapper {
-      margin-top: 15px;
-      padding: 0 16px;
+      margin-top: 0;
+      padding: 0;
     }
 
     .zoom-container {
