--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     }
 
     .zoom-container img {
-      transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1;
+      transition: transform 0.4s cubic-bezier (0.25, 0.8, 0.25, 1);
       transform-origin: center center;
       width: 100%;
       height: auto;
